--- a/main.html
+++ b/main.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="rsh1"></h1>
-    <p id="p1"></p>
-    <p id="p2"></p>
-    <p id="p3"></p>
+    <h1 id="myh1">welcome</h1>
+    <label >username</label>
+    <input id="text"><br><br>
+    <button id="submit">submit</button>
+
     <script src="main.js"></script>
 
 </body>
